<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/round"
    android:orientation="vertical">
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_best_option"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/dark_blue"
        />

    <LinearLayout
        android:id="@+id/llCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_camera_alt_24"
            app:tint="@color/light_dark_blue_200"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@color/light_dark_blue_200"
            android:layout_marginStart="10dp"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/llGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="100dp"
        android:layout_marginHorizontal="30dp"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_perm_media_24"
            app:tint="@color/light_dark_blue_200"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallery"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@color/light_dark_blue_200"
            android:layout_marginStart="10dp"
            />

    </LinearLayout>




</LinearLayout>